# NEMO-MQTT-Plugin

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  run_tests.py
.github/workflows/: ci.yml
scripts/: format.sh  lint.sh  monitor_services.sh  test.sh
src/NEMO_mqtt/: __init__.py  admin.py  apps.py  connection_manager.py  customization.py  redis_mqtt_bridge.py  redis_publisher.py  signals.py
src/NEMO_mqtt/bridge/: __init__.py  auto_services.py  process_lock.py
src/NEMO_mqtt/management/: __init__.py
src/NEMO_mqtt/management/commands/: __init__.py  setup_nemo_integration.py  test_mqtt_api.py
src/NEMO_mqtt/migrations/: 0001_initial.py  0004_remove_server_cert_content.py  0006_rename_db_tables_to_lowercase.py  0008_fix_qos_level.py
src/NEMO_mqtt/monitoring/: README.md  mqtt_monitor.py  redis_checker.py
src/NEMO_mqtt/templates/nemo_mqtt/: monitor.html
src/NEMO_mqtt_bridge/: __init__.py  apps.py  models.py  redis_mqtt_bridge.py  urls.py  views.py
src/NEMO_mqtt_bridge/bridge/: mqtt_connection.py
src/NEMO_mqtt_bridge/management/: __init__.py
src/NEMO_mqtt_bridge/management/commands/: install_mqtt_plugin.py  setup_nemo_integration.py
src/NEMO_mqtt_bridge/migrations/: 0002_mqttconfiguration_ca_cert_content_and_more.py  0003_add_server_certificates.py  0005_simplify_tls_config.py  0007_replace_tls_with_hmac.py  0009_hmac_sha256_only.py
src/NEMO_mqtt_bridge/monitoring/: README.md  __init__.py  mqtt_monitor.py  redis_checker.py  run_monitor.py
src/NEMO_mqtt_bridge/templates/customizations/: customizations_mqtt.html
src/nemo_mqtt/: redis_mqtt_bridge.py  utils.py
src/nemo_mqtt/management/commands/: install_mqtt_plugin.py  setup_nemo_integration.py
tests/: conftest.py  test_apps.py  test_models.py  test_monitor_api.py  test_redis_mqtt_bridge.py  test_redis_publisher.py  test_settings.py  test_signals.py  test_simple.py  test_views.py  urls.py
